--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         </section>
 
         <aside class="d-flex">
-            <div class="m-2 p-2" style="text-align: center;">
+            <div class="m-2 p-2 border" style="text-align: center;">
                 <h3>Arvydas Vitkus PS-16</h3>
             </div>
 
-            <div class="m-2">
+            <div class="m-2 border">
                 <p class="m-2">Ikelti 3D modelio failus:</p>
                 <form action="">
                     <div class="d-flex">
@@ -34,7 +34,7 @@
             </div>
 
             
-            <div class="flex-1 m-2 content" style="border: 1px solid black;">
+            <div class="flex-1 m-2 content border">
                 <p class="m-2">Pavyzdiniai 3D modeliai:</p> 
                 <div class="box">
 
