fps and complexity

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </p>
 
 
-        <span id="span_fps">FPS: ##</span>
+        <span id="span_fps">FPS: 0</span>
         <span id="span_vert">Vert: ###</span>
         <span id="span_tris">Tris: ###</span>
     </footer>
