memory & vertex fix

--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
         </p>
 
 
-        <span id="span_fps">FPS: 0</span>
-        <span id="span_vert">Vert: ###</span>
-        <span id="span_tris">Tris: ###</span>
+        <span id="span_fps">Kadrai: 0</span>
+        <span id="span_tris">Trikampiai: 0</span>
     </footer>
 
     
