--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="box">
 
                     <div class="model"id=0>
-                        <p id=0>Ikeltas modelis</p>
+                        <p id=0>Įkeltas modelis</p>
                     </div>
 
                     <div class="model"id=1>
@@ -49,10 +49,10 @@
                         <p id=3>Modelis 3: drakonas</p>
                     </div>
                     <div class="model"id=4>
-                        <p id=4>Modelis 4: malunas</p>
+                        <p id=4>Modelis 4: malūnas</p>
                     </div>
                     <div class="model"id=5>
-                        <p id=5>Modelis 5: sautuvas</p>
+                        <p id=5>Modelis 5: šautuvas</p>
                     </div>
                     <div class="model"id=6>
                         <p id=6>Modelis 6: statula #1</p>
